<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- The main content view -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="@dimen/hoodlib_toolbar_elevation"
                android:theme="@style/AppThemeActionBar"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/toggle_drawer"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Toggle Drawer"/>
        </FrameLayout>

        <at.favre.lib.hood.view.HoodDebugPageView
            android:id="@+id/debug_view"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?android:windowBackground"
            android:elevation="@dimen/hoodlib_toolbar_elevation"
            android:theme="@style/HoodLibThemeOverlay.Dark.Small"
            tools:targetApi="lollipop" />
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
