...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_log"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/hood_log_to_console"/>

                <Button
                    android:id="@+id/btn_copy_clipboard"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/hood_copy_to_clipboard"/>
...
